--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <img src="img/DADA POEM FINAL PROJECTTTT.jpg">
     <img src="img/Artboard 1.png">
     <img src="img/Artboard 2.png">
-    <img src="img/Artboard 3.png">                            
+    <img src="img/Artboard 3.png"> 
+      <div style="width:100%;height:0;padding-bottom:125%;position:relative;"><iframe src="https://giphy.com/embed/WRv16Bl7KOnHJEJrEI" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+      
   </div>  
 
-  
-  </body>
+    </body>
 </html>
